repositioning after gap fix

--- a/src/Style/Style.sass
+++ b/src/Style/Style.sass
@@ -25,11 +25,11 @@ $color-theme-trans-light: rgba(39, 51, 107, 0.25)
     min-height: 120vh
     background-origin: border-box
     background-attachment: fixed
-    background-size: cover
-    -webkit-background-size: cover
-    -moz-background-size: cover
-    -o-background-size: cover
-    background-position-x: 64.5% 
+    background-size: 300vh auto
+    -webkit-background-size: 300vh auto
+    -moz-background-size: 300vh auto
+    -o-background-size: 300vh auto
+    background-position-x: 61% 
     background-position-y: 70%
 
 body 
